--- a/k8s/rsvp.yaml
+++ b/k8s/rsvp.yaml
@@ -44,7 +44,39 @@ spec:
     protocol: TCP
   selector:
     app: rsvp
-    
+
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  annotations:
+    alb.ingress.kubernetes.io/actions.redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_302"}}'
+    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:iam::757331626471:server-certificate/star_origami42_com_2019"
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
+    alb.ingress.kubernetes.io/scheme: internal
+    alb.ingress.kubernetes.io/subnets: "subnet-13c70964,subnet-8fb51dea,subnet-a234dbfb"
+    alb.ingress.kubernetes.io/tags: "billing.environment=p3,billing.purpose=eks-p3-lb"
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
+    kubernetes.io/ingress.class: alb
+  name: rsvp
+  namespace: argocd
+spec:
+  rules:
+    - http:
+        paths:
+          - backend:
+              serviceName: redirect
+              servicePort: use-annotation
+            path: /*
+    - host: a926713e5830411e9ae2f027f837c013-2126783982.us-west-2.elb.amazonaws.com
+      http:
+        paths:
+          - backend:
+              serviceName: rsvp
+              servicePort: 80
+            path: /*
+
 ---
 apiVersion: apps/v1
 kind: Deployment
