Adding LoadBalancing type

--- a/k8s/rsvp.yaml
+++ b/k8s/rsvp.yaml
@@ -37,13 +37,13 @@ metadata:
   labels:
     app: rsvp
 spec:
-  type: NodePort
   ports:
   - port: 80
     targetPort: web-port
     protocol: TCP
   selector:
     app: rsvp
+  type: LoadBalancer
 
 ---
 apiVersion: apps/v1
